<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:text="@string/what_s_your_insurer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/insurer_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>

    <AutoCompleteTextView
        android:text=""
        android:hint="@string/insurer_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insurer_autocomplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/insurer_label"
        android:ems="10" >
            <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/next_button"
        android:text="@string/next"
        android:layout_width="0dp"
        style="@style/ButtonTheme"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>