<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/what_s_your_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>

    <EditText
            android:text=""
            android:hint="@string/address_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_autocomplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/address_label">
    </EditText>

    <Button
            android:id="@+id/next_button"
            android:text="@string/next"
            android:layout_width="0dp"
            style="@style/ButtonTheme"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/address_suggestion_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintTop_toBottomOf="@+id/address_selection_text2"/>

    <TextView
            tools:text="ajsjasbha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/address_selection_text1"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/address_autocomplete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
    />

    <TextView
            tools:text="aSHbshjbsHJ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/address_selection_text2"
            app:layout_constraintTop_toBottomOf="@+id/address_selection_text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
    />

</android.support.constraint.ConstraintLayout>